changed header to img with style

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
            
                 <div class="d-flex justify-content-center align-items-center header">
                     <div>
-                        <div id="overlay"></div>
+                        <!-- <div id="overlay"></div>
                         <div class="text-center text-white">
                             <h1>Night In</h1>
                             <h4>A New Kind of Date Night</h4>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
        
