--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
                             <h3 class="fw-500">Night In</h3>
                             <h5>A display of DOM manipulation and API calls</h5>
                             <br>
-                            <p>In this project I used the The Movie Data Base API along with the Yelp API to display a nearby restaraunt nearby that delivers food and a random movie based on location and genre put into the form.  On submit I used DOM Manipulation to display the information to the user.  I found the Yelp API difficult to work with because it needed a key and had CORS issues, however solved this by routing the API call though CORS-Anywhere to allow my call to be processed.  In V2 of this application I would like to allow users to make accounts, save dates, and implement a feature that offers them to choose movies or tv shows, and to cook or order in. </p>
+                            <p>In this project I used the The Movie Data Base API along with the Yelp API to display a nearby restaurant nearby that
+                            delivers food and a random movie based on location and genre put into the form. On submit I used DOM Manipulation to
+                            display the information to the user. I found the Yelp API difficult to work with because it needed a key and had CORS
+                            issues, however solved this by routing the API call though CORS-Anywhere to allow my call to be processed. In V2 of this
+                            application I would like to allow users to make accounts, save dates, and implement a feature that offers them to choose
+                            movies or tv shows, and to cook or order in.</p>
                         </div>
                     </div>
                 </div>
