added content to readme

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- hard-discussion.surge.sh -->
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -93,7 +94,7 @@
                     <div class="row gap-y align-items-center pt-3">
                         <div class="col-md-4 team-2 text-md-right">
                             <a href="#">
-                                <img src="./assets/krystine.jpeg" alt="...">
+                                <img src="./krystine.jpeg" alt="...">
                             </a>
                             <h5>Krystine Jannenga</h5>
                             <small>Galvanize Student</small>
